# cybersec_project

./: .env.example  .gitignore  ATTACK_INJECTOR_COMPLETE.md  COLLECTOR_TIME_BEHAVIOR.md  COMPLETE_SYSTEM_EXPLANATION.md  CURRENT_STATUS.md  DATASET_COMPARISON.md  DEMO_CHEATSHEET.md  DNS_COLLECTOR_SUMMARY.md  GIT_PUSH_GUIDE.md  INSTALLATION.md  NEW_COLLECTORS_SUMMARY.md  PHASE_1_COMPLETE.md  PROGRESS.md  QUICK_REFERENCE.md  README.md  SYSTEM_READY.md  TECHNICAL_REPORT.md  TEST_COMMANDS.md  TEST_RESULTS.md  check_collector_time_ranges.py  create_balanced_cert_dataset.py  dashboard.py  mcp_config.json  pdf_reader.py  pyproject.toml  requirements.txt  test_file_collector_simple.py  test_mcp_full_workflow.py  test_real_collection.py  test_with_file_activity.py
.kiro/specs/mcp-tool-servers/: .config.kiro  design.md  requirements.md  tasks.md
agents/: __init__.py
collectors/: event_schema.py  windows_event_collector.py
data/attacks/: attack_patterns.json  cert_converter.py
mailbox/: clean_events.json  clean_events_metadata.json
mcp_servers/event_storage/: storage_engine.py
tests/: test_attack_injector.py  test_collector_executor.py  test_event_storage.py
